added cal dates

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
         <h3 class="cards__heading--three">Covid-19 Update</h3>
         <p class="cards__about update">
-          Our preschool is currently open and operating under guidelines approved by our Preschool Board and Risk Mitigation Commission of Parkway Church.  These guidelines were composed after consideration of guidelines set forth by GA Bright from the Start, <a href="https://www.forsyth.k12.ga.us/site/default.aspx?PageType=3&DomainID=1&ModuleInstanceID=8626&ViewID=6446EE88-D30C-497E-9316-3F8874B3E108&RenderLoc=0&FlexDataID=96792&PageID=1" class="aboutus__link" target="_blank">Forsyth County Schools</a>, and the Centers for Disease Control. Our COVID-19 policies can be found <a href="/forms.html" class="aboutus__link" target="_blank">here.</a> Our <a href="https://facebook.com/parkwaypresbyterianpreschool/" class="aboutus__link" target="_blank">Facebook page</a> provides updates on closures. Feel free to call or email us with questions.
+          Our preschool is currently open and operating under guidelines approved by our Preschool Board and Risk Mitigation Commission of Parkway Church.  These guidelines were composed after consideration of guidelines set forth by GA Bright from the Start, <a href="https://www.forsyth.k12.ga.us/restartforsyth" class="aboutus__link" target="_blank">Forsyth County Schools</a>, and the Centers for Disease Control. Our COVID-19 policies can be found <a href="/forms.html" class="aboutus__link" target="_blank">here.</a> Our <a href="https://facebook.com/parkwaypresbyterianpreschool/" class="aboutus__link" target="_blank">Facebook page</a> provides updates on closures. Feel free to call or email us with questions.
         </p>
         
         <p class="cards__about">
@@ -198,11 +198,16 @@
           <ul class="current-cal--list">
          <li class="current-cal--item current-cal--item--flex">
               <img src="img/aqua-circle-bubble.png" alt="" class="current-cal--img">
-              <p class="current-cal--para">November 3<sup>rd</sup>: Spring Break - NO SCHOOL</p>
+              <p class="current-cal--para">November 3<sup>rd</sup>: NO SCHOOL</p>
           </li>
           <li class="current-cal--item current-cal--item--flex">
               <img src="img/aqua-circle-bubble.png" alt="" class="current-cal--img">
-              <p class="current-cal--para">November 23<sup>rd</sup> -27<sup>th</sup>: NO SCHOOL – Thanksgiving Break</p> 
+              <p class="current-cal--para">November 23<sup>rd</sup> - 27<sup>th</sup>: NO SCHOOL – Thanksgiving Break</p> 
+
+          </li>
+          <li class="current-cal--item current-cal--item--flex">
+              <img src="img/aqua-circle-bubble.png" alt="" class="current-cal--img">
+              <p class="current-cal--para">December 17<sup>th</sup> -31<sup>st</sup>: NO SCHOOL – Christmas Break</p> 
 
           </li>
           <li class="current-cal--item current-cal--item--flex">
@@ -212,7 +217,7 @@
           </li>
           <li class="current-cal--item current-cal--item--flex">
               <img src="img/aqua-circle-bubble.png" alt="" class="current-cal--img">
-              <p class="current-cal--para">January 11<sup>th</sup> &amp; 12<sup>th</sup>: NO SCHOOL – Christmas Break</p> 
+              <p class="current-cal--para">January 11<sup>th</sup> &amp; 12<sup>th</sup>: Tour Days for 2021-22 Registration</p> 
           </li>
           <li class="current-cal--item current-cal--item--flex">
               <img src="img/aqua-circle-bubble.png" alt="" class="current-cal--img">
