--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <h2 class="cards__heading sect-heading">Our School</h2>
         <div class="sect-heading-img"></div>
         
-        <p class="registration">The 2020-2021 registration form is now available. Please visit <a class="aboutus__link" href="/forms.html">the forms page</a> to download.</p>
+        <p class="registration">The 2021-2022 registration form is now available. Please visit <a class="aboutus__link" href="/forms.html">the forms page</a> to download.</p>
 
         <h3 class="cards__heading--three">Covid-19 Update</h3>
         <p class="cards__about update">
@@ -142,7 +142,7 @@
                     <div class="cards__icon-wrap">
                         <i class="flaticon-balloons cards__icon"></i>       
                     </div>
-                    <p class="cards__summary">Check out our calendar to see upcoming events, holidays, and other activites during the 2019-2020 school year.</p>
+                    <p class="cards__summary">Check out our calendar to see upcoming events, holidays, and other activites during the 2020-2021 school year.</p>
                     <a href="calendar.html" class=" cards__btn btn" style="margin-bottom: 1.5em">Calendar</a>
                 </div>
             </div>
@@ -196,28 +196,9 @@
               </text>
           </svg>
           <ul class="current-cal--list">
-         <li class="current-cal--item current-cal--item--flex">
-              <img src="img/aqua-circle-bubble.png" alt="" class="current-cal--img">
-              <p class="current-cal--para">November 3<sup>rd</sup>: NO SCHOOL</p>
-          </li>
           <li class="current-cal--item current-cal--item--flex">
               <img src="img/aqua-circle-bubble.png" alt="" class="current-cal--img">
-              <p class="current-cal--para">November 23<sup>rd</sup> - 27<sup>th</sup>: NO SCHOOL – Thanksgiving Break</p> 
-
-          </li>
-          <li class="current-cal--item current-cal--item--flex">
-              <img src="img/aqua-circle-bubble.png" alt="" class="current-cal--img">
-              <p class="current-cal--para">December 17<sup>th</sup> -31<sup>st</sup>: NO SCHOOL – Christmas Break</p> 
-
-          </li>
-          <li class="current-cal--item current-cal--item--flex">
-              <img src="img/aqua-circle-bubble.png" alt="" class="current-cal--img">
-              <p class="current-cal--para">January 1<sup>st</sup> – 6<sup>th</sup>: NO SCHOOL – Christmas Break</p> 
-
-          </li>
-          <li class="current-cal--item current-cal--item--flex">
-              <img src="img/aqua-circle-bubble.png" alt="" class="current-cal--img">
-              <p class="current-cal--para">January 11<sup>th</sup> &amp; 12<sup>th</sup>: Tour Days for 2021-22 Registration</p> 
+              <p class="current-cal--para">January 18<sup>th</sup>: Virtual Tour Information Coming Soon!</p> 
           </li>
           <li class="current-cal--item current-cal--item--flex">
               <img src="img/aqua-circle-bubble.png" alt="" class="current-cal--img">
